--- a/gui/package.json
+++ b/gui/package.json
@@ -11,7 +11,8 @@
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-select": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
