--- a/gui/src/config/config.json
+++ b/gui/src/config/config.json
@@ -1,5 +1,5 @@
 {
     "isDebugging": false,
-    "backendServer": "http://kg2018a.isi.edu/fuzzysearch/query",
-    "queryServer": "http://dsbox02.isi.edu:8888"
+    "backendServer": "https://kg2018a.isi.edu/fuzzysearch/query",
+    "queryServer": "https://dsbox02.isi.edu:8888"
 }
