--- a/gui/package.json
+++ b/gui/package.json
@@ -7,12 +7,18 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-select": "^3.0.8",
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2",
-    "react-select": "^3.0.8"
+    "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
