--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
       - task: CopyFiles@2
         displayName: 'Copy Files'
         inputs:
-          SourceFolder: 'gui\build'
+          SourceFolder: 'gui/build'
           TargetFolder: '$(build.artifactstagingdirectory)'
           CleanTargetFolder: true
 
