Add deployment to S3

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,31 +4,39 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-stages:
-- stage: build
-  jobs:
-    - job: build
+jobs:
+  - job: build
 
-      steps:
-      - task: NodeTool@0
-        inputs:
-          versionSpec: '10.x'
-        displayName: 'Install Node.js'
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
+      displayName: 'Install Node.js'
 
-      - script: |
-          cd gui
-          npm install
-          npm run build
-        displayName: 'npm install and build'
+    - script: |
+        cd gui
+        npm install
+        npm run build
+      displayName: 'npm install and build'
 
-      - task: CopyFiles@2
-        displayName: 'Copy Files'
-        inputs:
-          SourceFolder: 'gui/build'
-          TargetFolder: '$(build.artifactstagingdirectory)'
-          CleanTargetFolder: true
+    - task: CopyFiles@2
+      displayName: 'Copy Files'
+      inputs:
+        SourceFolder: 'gui/build'
+        TargetFolder: '$(build.artifactstagingdirectory)'
+        CleanTargetFolder: true
 
-      - task: PublishBuildArtifacts@1      
-        inputs:
-          PathtoPublish: '$(build.artifactstagingdirectory)'
-          ArtifactName: 'build'
+    - task: PublishBuildArtifacts@1      
+      inputs:
+        PathtoPublish: '$(build.artifactstagingdirectory)'
+        ArtifactName: 'build'
+
+  - job: deploy
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.6'
+    - script: |
+        pip install awscli
+        aws s3 sync ${build.artifactstagingdirectory} s3://wikidata-fuzzy-search
+        
