--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,5 +38,4 @@ jobs:
         versionSpec: '3.6'
     - script: |
         pip install awscli
-        aws s3 sync ${build.artifactstagingdirectory} s3://wikidata-fuzzy-search
-        
+        aws s3 sync $(build.artifactstagingdirectory) s3://wikidata-fuzzy-search
