--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,10 @@ jobs:
   - job: build
 
     steps:
+    - script: |
+        echo Checking environment
+        echo $(AWS_ACCESS_KEY_ID)
+        echo $(AWS_SECRET_ACCESS_KEY)
     - task: NodeTool@0
       inputs:
         versionSpec: '10.x'
