--- a/gui/package.json
+++ b/gui/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.8",
     "bootstrap": "^4.3.1",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
