--- a/gui/package.json
+++ b/gui/package.json
@@ -15,9 +15,12 @@
     "bootstrap": "^4.3.1",
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
+    "plotly.js": "^1.51.3",
+    "plotly.js-basic-dist": "^1.51.3",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
+    "react-plotly.js": "^2.4.0",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "typescript": "^3.7.4"
