--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,17 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Flask Backend",
+            "type": "shell",
+            "command": [
+                "${config:python.pythonPath}"
+            ],
+            "args": [
+                "${workspaceFolder}/ws.py"
+            ],
+            "problemMatcher": []
+        },
+        {
             "type": "npm",
             "script": "start",
             "path": "gui/",
