--- a/gui/.env
+++ b/gui/.env
@@ -1,3 +1,3 @@
 REACT_APP_SPARQL_URL = "https://dsbox02.isi.edu:8888/bigdata/namespace/wdq/sparql?query="
 REACT_APP_IS_DEBUGGING = false
-REACT_APP_BACKEND_URL = ""https://kg2018a.isi.edu/fuzzysearch/query"
+REACT_APP_BACKEND_URL = "https://kg2018a.isi.edu/fuzzysearch/query"
