Package backend for deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "python.pythonPath": "env\\Scripts\\python.exe",
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
