--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [    
+    "configurations": [
+        {
+            "name": "Package for Deployment",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/deployment/package-backend.py",
+            "console": "integratedTerminal",
+            "args": [
+                "${workspaceFolder}/..",
+                "d:\\temp\\wikidata-package.zip"
+            ]
+        },
         {
             "type": "chrome",
             "request": "launch",
