--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,7 @@
                 "--port",
                 "14000"
             ],
+            "cwd": "${workspaceFolder}/backend",
             "jinja": true
         },
     ]
