--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "ws.py",
+                "FLASK_APP": "app.py",
                 "FLASK_ENV": "development",
                 "FLASK_DEBUG": "0"
             },
