Fix backend gunicorn Fix frontend to access our backend

--- a/deployment/gunicorn.service
+++ b/deployment/gunicorn.service
@@ -9,7 +9,7 @@ User=webapp
 Group=www-data
 WorkingDirectory=/home/webapp/src/wikidata-fuzzy-search/backend
 Environment="PATH=/home/webapp/web/env/bin"
-ExecStart=/home/webapp/web/env/bin/gunicorn --workers 1 --timeout 900 --bind unix:/home/webapp/web/run/gunicorn.sock --log-file /home/webapp/web/logs/gunicorn.log ws:app
+ExecStart=/home/webapp/web/env/bin/gunicorn --workers 3 --timeout 900 --bind unix:/home/webapp/web/run/gunicorn.sock --log-file /home/webapp/web/logs/gunicorn.log app:app
 
 [Install]
 WantedBy=multi-user.target
