--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
       displayName: 'Install Node.js'
 
     - script: |
-        cd gui
+        cd frontend
         yarn install
         yarn build
       displayName: 'npm install and build'
@@ -22,7 +22,7 @@ jobs:
     - task: CopyFiles@2
       displayName: 'Copy Files'
       inputs:
-        SourceFolder: 'gui/build'
+        SourceFolder: 'frontend/build'
         TargetFolder: '$(build.artifactstagingdirectory)'
         CleanTargetFolder: true
 
