--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.pythonPath": "${workspaceFolder}\\backend\\env\\Scripts\\python.exe",
     "editor.detectIndentation": false,
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.formatting.provider": "yapf"
 }
