Docker deployment is working

--- a/deployment/Frontend/Dockerfile
+++ b/deployment/Frontend/Dockerfile
@@ -1,4 +1,8 @@
 FROM node:alpine3.10 AS builder
+
+COPY . /tmp/context
+RUN find /tmp/context
+
 RUN mkdir -p /src
 COPY  frontend src
 WORKDIR /src
