Update address of the production backend

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL = "https://dsbox02.isi.edu:10020"
+REACT_APP_BACKEND_URL = "https://dsbox02.isi.edu:10020/backend"
 REACT_APP_IS_DEBUGGING = false
