Remove the <config> from the linking url. Make config a single dictionary, without theoretical support for numerous configurations Move the indices to a settings.py controlled location Improve cache.py - so it loads the indices and only updates what is necessary. Change the docker settings to allow a mountable location for the cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 __pycache__/
 cache/
+.mypy_cache/
 local_settings.py
 instance/
 .webassets-cache
@@ -12,4 +13,7 @@ frontend/build
 
 # Model data
 data-label-augmentation/
+
+# Index files
+backend/data/*.yml
 
