--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.formatting.provider": "yapf",
-    "python.linting.mypyEnabled": false
+    "python.linting.mypyEnabled": false,
+    "python.envFile": "${workspaceFolder}/backend/.python.env"
 }
