--- a/.vscode/settings.linux.json
+++ b/.vscode/settings.linux.json
@@ -1,9 +1,9 @@
 {
-    "python.pythonPath": "${workspaceFolder}\\backend\\env\\Scripts\\python.exe",
+    "python.pythonPath": "${workspaceFolder}/backend/env/bin/python",
     "editor.detectIndentation": false,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.formatting.provider": "yapf",
     "python.linting.mypyEnabled": false,
-    "python.envFile": "${workspaceFolder}/backend/.python.env"
+    "python.envFile": "${workspaceFolder}/backend/.python.linux.env"
 }
