--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         - POSTGRES_DB=wikidata
     volumes:
         - postgres:/var/lib/postgresql/data
-        - ./data/postgres/import/uaz.sql:/docker-entrypoint-initdb.d/01-uaz.sql
+        - ./data/postgres/uaz.sql:/docker-entrypoint-initdb.d/01-uaz.sql
     ports:
         - "5433:5432"
 
